@@ -1,3 +1,10 @@
+2005-03-31  Mikael Hallendal  <micke@imendio.com>
+
+	* loudmouth/lm-debug.h: Correct log domain
+	* loudmouth/lm-ssl.c: (ssl_verify_certificate):
+	- Removed GNUTLS_CERT_NOT_TRUSTED which has been removed from GnuTLS.
+	- Patch from foser@gentoo.org
+
 2005-02-02  Mikael Hallendal  <micke@imendio.com>
 
 	* examples/lm-change-password.c: (print_usage), (main):
